add pictures to the website

--- a/recipes/KoreanBeefBowl.html
+++ b/recipes/KoreanBeefBowl.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Korean Beef Bowl</h1>
-
+            <img src="../img/koreanbeefbowl.jpg" alt="korean beef bowl with green onions" width="600" height="600">
 
     </body>
 
