--- a/recipes/MatchaTiramisu.html
+++ b/recipes/MatchaTiramisu.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Matcha Tiramisu</h1>
-
+            <img src="../img/matchatiramisu.jpg" alt="a slice of matcha tiramisu" width="600" height="600"
 
     </body>
 
