--- a/recipes/ChickenKatsu.html
+++ b/recipes/ChickenKatsu.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Chicken Katsu</h1>
-
+            <img src="../img/chickenkatsu.jpg" alt="chicken katsu on a bed of cabbage with rice"
 
     </body>
 
