Add ingredients and steps section to recipes

--- a/recipes/ChickenKatsu.html
+++ b/recipes/ChickenKatsu.html
@@ -8,7 +8,40 @@
     </head>
     <body>
         <h1>Chicken Katsu</h1>
-            <img src="../img/chickenkatsu.jpg" alt="chicken katsu on a bed of cabbage with rice"
+            <img src="../img/chickenkatsu.jpg" alt="chicken katsu on a bed of cabbage with rice">
+
+        <h2>Description</h2>
+            <p>What is Chicken Katsu? Katsu is a very popular Japanese comfort food made up of breaded cutlets of 
+                chicken or pork mostly. The secret is having a crispy golden brown outside while still having a juicy 
+                tender inside. Katsu dishes are traditionally served with katsu sauce drizzled on top of the meat with a side of 
+                crunchy shredded cabbage and steamed rice. 
+             </p>
+
+        <h3>Ingredients</h3>     
+             <ul>
+                <li>4 skinless, boneless chicken breast halves - pounded to 1/2 inch thickness </li>
+                <li>salt and pepper to taste</li>
+                <li>2 tablespoons all-purpose flour</li>
+                <li>1 egg, beaten</li>
+                <li>1 cup panko bread crumbs</li>
+                <li>1 cup oil for frying</li>
+
+         <h3>Steps</h3>       
+                <li>Season chicken breasts on both sides with salt and pepper.</li>
+                <li>Place the flour, egg, and panko crumbs into individual small dishes.</li>
+                <li>Coat the chicken breasts in flour, shaking off the excess.</li>
+                <li>Dip the coated chicken into the panko crumbs until fully coated on both sides.</li>
+                <li>Heat 1/4 inch of oil into a large skillet over medium-high heat.</li>
+                <li>Place chicken into the hot oil, and cook 3-4 minutes per side, or until golden brown.</li>
+                <li>Let chicken cool for a bit and serve with katsu sauce, side of shredded cabbage, and rice.</li> 
+                <li>Enjoy!</li>
+
+
+
+
+
+             </ul>
+
 
     </body>
 
