--- a/recipes/KoreanBeefBowl.html
+++ b/recipes/KoreanBeefBowl.html
@@ -9,6 +9,43 @@
     <body>
         <h1>Korean Beef Bowl</h1>
             <img src="../img/koreanbeefbowl.jpg" alt="korean beef bowl with green onions" width="600" height="600">
+        <h2>Description</h2>
+            <p>Ever want Bulgogi but you're feeling a tad lazy? Look no further than the Korean beef bowl. This recipe is 
+            pretty much the faster and cheaper version of it. Rather than letting the Bulgogi marinate overnight you
+            can have the same amazing taste in 15 mins. Tonight why not have a little KBBQ in a bowl.
+             This is a fail-proof recipe that anyone can make!</p>
+
+        <h3>Ingredients</h3>
+                <ul>
+                    <li>1 pound lean ground beef</li>
+                    <li>5 cloves garlic, crushed</li>
+                    <li>1 tablespoon freshly grated ginger</li>
+                    <li>2 teaspoons toasted sesame oil</li>
+                    <li>½ cup reduced-sodium soy sauce</li>
+                    <li>⅓ cup light brown sugar </li>
+                    <li>¼ teaspoon crushed red pepper </li>
+                    <li>6 green onions, chopped, divided </li>
+                    <li>4 cups hot cooked white or brown (look at you being healthy) rice </li>
+                    <li>1 tablespoon toasted sesame seeds</li>
+
+                </ul>
+        <h3>Steps</h3>
+                <ol>
+                    <li>Heat a large skillet over medium-high heat. Add beef and cook, stirring and breaking it up
+                        into small pieces until finally browned. This should take 5-7 minutes. Drain excess grease.
+                    </li>
+                    <li>Add ginger,garlic, and sesame oil, stirring until fragrant. This should take about 2 minutes. Stir in 
+                        your soy sauce, brown sugar, and red pepper. Cook until the sauce is partially absorbed into the beef.
+                        This should take about 7 minutes. Then add half of the chopped green onions.
+                    </li>
+                    <li>Serve beef over the hot rice; garnished with sesame seeds and the other half of the green onions.</li>
+                    <li>Most importantly enjoy!</li>
+
+
+
+                </ol>
+
+
 
     </body>
 
