--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-            <a href="recipes/KoreanBeefBowl.html">Korean Beef Bowl</a>
-            <a href="recipes/ChickenKatsu.html">Chicken Katsu</a>
-            <a href="recipes/MatchaTiramisu.html">Matcha Tiramisu</a>
-
+            <ul>
+                <li><a href="recipes/KoreanBeefBowl.html">Korean Beef Bowl</a></li>
+                <li><a href="recipes/ChickenKatsu.html">Chicken Katsu</a></li>
+                <li><a href="recipes/MatchaTiramisu.html">Matcha Tiramisu</a></li>
+            </ul>
 
 
     </body>
